force-app/main/default/objects/Haravan_shipment__c/Haravan_shipment__c.object-meta.xml
<CustomObject>
    <label>Retail Shipment</label>
    <nameField>
        <displayFormat>Shipment -{000000000}</displayFormat>
        <label>Shipment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>