force-app/main/default/objects/Haravan_shipment__c/fields/Actual_COD_amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_COD_amount__c</fullName>
    <label>Actual COD amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>