force-app/main/default/objects/Haravan_shipment__c/fields/Actual_shipment_fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_shipment_fee__c</fullName>
    <label>Actual shipment fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>