force-app/main/default/objects/Haravan_shipment__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <label>Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Haravan_shipment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>