force-app/main/default/objects/Haravan_shipment__c/fields/Carrier_COD_Status__c.field-meta.xml
<CustomField>
    <fullName>Carrier_COD_Status__c</fullName>
    <label>Carrier COD Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chưa lấy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>