force-app/main/default/objects/Haravan_shipment__c/fields/Carrier_Status__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Status__c</fullName>
    <label>Carrier Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chờ lấy hàng</fullName>
            </value>
            <value>
                <fullName>Hủy giao hàng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>