force-app/main/default/objects/Haravan_shipment__c/fields/COD_amount__c.field-meta.xml
<CustomField>
    <fullName>COD_amount__c</fullName>
    <label>COD amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>