force-app/main/default/objects/Haravan_shipment__c/fields/Haravan_Order__c.field-meta.xml
<CustomField>
    <fullName>Haravan_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Id</label>
    <referenceTo>Haravan_Order__c</referenceTo>
    <relationshipName>Haravan_shipment</relationshipName>
    <type>Lookup</type>
</CustomField>