force-app/main/default/objects/Haravan_shipment__c/fields/Note_for_shipment__c.field-meta.xml
<CustomField>
    <fullName>Note_for_shipment__c</fullName>
    <label>Note for shipment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>