force-app/main/default/objects/Haravan_shipment__c/fields/Status1__c.field-meta.xml
<CustomField>
    <fullName>Status1__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>