force-app/main/default/objects/Haravan_shipment__c/fields/Total_weight__c.field-meta.xml
<CustomField>
    <fullName>Total_weight__c</fullName>
    <label>Total weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>