force-app/main/default/objects/Haravan_shipment__c/fields/Tracking_number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_number__c</fullName>
    <label>Tracking number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>