force-app/main/default/objects/Haravan_shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Haravan_Order__c</columns>
    <columns>Delivery__c</columns>
    <columns>Buyer__c</columns>
    <columns>Status1__c</columns>
    <columns>COD_amount__c</columns>
    <columns>Size__c</columns>
    <columns>Total_weight__c</columns>
    <columns>Tracking_number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>